--- a/Research_on_water_status.tex
+++ b/Research_on_water_status.tex
@@ -7,6 +7,10 @@
 \usepackage{graphicx}
 \usepackage{pgfplots}
 \usepackage{makecell}
+\usepackage{array}
+\usepackage{booktabs}
+\usepackage{textcomp}
+
 \biboptions{sort&compress}
 \setmainfont{Times New Roman}
 \journal{TBD}
