--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -7,17 +7,12 @@ Their versatility allows them to function not only as a small-scale distributed 
 % 它们的多功能性使它们不仅可以作为小型分布式电源，还可以作为大功率运输系统的能源，从而展示了其广泛的适用性\cite{sharafOverviewFuelCell2014}。
 Nevertheless, the reliability, stability, and durability of the fuel cell stack, as the central component of the fuel cell power system, have emerged as critical factors influencing the extensive commercialization of fuel cell products.
 % 然而，燃料电池电堆作为燃料电池动力系统的核心部件，其可靠性、稳定性和耐用性已成为影响燃料电池产品广泛商业化的关键因素。
-% DONE: 尽可能去掉精确的数字表达。
-% DONE: 浓缩含水检测的方法
-% TODO: 把含水状态检测方法的部分分别讲一下优缺点
-% TODO: 基于阻抗的和基于含水量的方法之间有什么区别
 During the operation of the fuel cell, it is crucial to maintain the proton exchange membrane (PEM) in an optimal state of hydration to ensure that the proton conduction capability is at its zenith, thereby facilitating efficient and stable output performance.
-Hydration state failure is the most common failure mode in fuel cells, representing approximately 52\% of total failures, and is primarily characterized by conditions of drying and flooding.
+Hydration state failure is the most common failure mode in fuel cells, representing approximately half of total failures, and is primarily characterized by conditions of drying and flooding.
 Short-term hydration state failures can lead to fluctuations and reductions in the fuel cell's output performance, and if such conditions are prolonged, they may result in irreversible performance degradation.
 The deficiency of water in PEMFC can lead to a decrease in proton conductivity, as noted in the literature \cite{shen_partial_2020,ous_degradation_2013,xiao_influence_2023}, which underscores the importance of monitoring and managing the hydration state to prevent operational inefficiencies and long-term damage to the fuel cell system.
-% DONE: 讲水很重要，干燥会造成什么样的影响。缺水会导致什么样的损伤。
 % 在燃料电池运行阶段，必须保持内部质子交换膜（PEM）处于最佳水合状态，以保证质子传导能力保持在峰值，从而实现燃料电池高效稳定的输出性能。
-% 水合状态失效是燃料电池最常见的失效模式，约占总失效的 52 例，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
+% 水合状态失效是燃料电池最常见的失效模式，约占总失效的一般，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
 \par
 In the event of a dry failure, the water content within the fuel cell stack is insufficient to maintain a properly hydrated state, leading to an increase in internal resistance and elevated heat production due to regions of the PEM not being fully hydrated.
 Prolonged dry conditions can potentially cause mechanical damage to the PEM, resulting in irreversible harm \cite{pattersonDamageCathodeCatalyst2006}.
@@ -31,24 +26,30 @@ In severe instances, additional side reactions can occur within the fuel cell un
 In addition to the direct impact on output performance, the internal hydration state also indirectly affects environmental adaptability and durability\cite{yuanModelbasedObserversInternal2020,fuFuelCellHumidity2021}. In low temperature conditions, especially in sub-zero environments, the free water inside the fuel cell will freeze, thereby blocking the reactant channels, and even causing structural damage to the catalyst layer and diffusion layer\cite{taccaniEffectFlowField2011,doddsHydrogenFuelCell2015}. In addition, it will also affect the aging characteristics of the catalyst\cite{pattersonDamageCathodeCatalyst2006,sunModelingInfluenceGDL2005}. Flooding conditions will accelerate the loss of Pt surface area, while dry conditions will accelerate the corrosion of the carbon carrier \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}.
 % 除了直接影响输出性能外，内部水合状态还间接影响环境适应性和耐久性。在低温条件下，尤其是零度以下的环境下，燃料电池内部的游离水会结冰，从而堵塞反应物通道，甚至造成催化剂层和扩散层的结构损坏。此外，它还会影响催化剂的老化特性。水淹条件会加速 Pt 表面积的损失，而干燥条件会加速碳载体的腐蚀。
 \par
-Currently, studies focusing on the characterization of the internal hydration state of fuel cells have yielded significant findings. Standard indicators utilized for ascertaining the hydration state of fuel cells encompass direct observation or computation of water content, electrical signals, pressure drop signals, and electrochemical signals \cite{hussainiVisualizationQuantificationCathode2009}.
+
+Research on fuel cell hydration states utilizes indicators like water content, electrical signals, and neutron imaging\cite{hussainiVisualizationQuantificationCathode2009, leeVisualizationFloodingSingle2012}, but high costs and complexity limit neutron imaging's adoption. Instead, the law of conservation of mass is employed to compute water content during stable operation, validated by comparing calculated rates with observed water distributions\cite{pekulaStudyWaterDistribution2005,traboldSituInvestigationWater2006,yangVisualizationLiquidWater2004}.
+
+% Research on the characterization of the internal hydration state of fuel cells has led to significant insights, with standard indicators including direct observation or computation of water content, electrical signals, pressure drop signals, and electrochemical signals \cite{hussainiVisualizationQuantificationCathode2009}. Determining the hydration state primarily involves assessing the internal water content, which is the most basic and accurate method. Techniques such as the transparent cell method, which uses transparent end plates and flow field plates to observe liquid water quantity \cite{leeVisualizationFloodingSingle2012}, and the neutron imaging method, which measures internal water content based on neutron beam attenuation \cite{pekulaStudyWaterDistribution2005, traboldSituInvestigationWater2006}, have been employed. However, the high cost and complexity of neutron imaging have restricted its widespread use. Consequently, researchers have turned to the law of conservation of mass to compute water content, measuring the flow rate of residual water during stable operation\cite{yangVisualizationLiquidWater2004}. Zhao et al. validated their model by comparing the calculated rate of change in water content with the observed water distribution in the flow channel\cite{zhaoStudyWaterTransport2021}.
+
+
+% Currently, studies focusing on the characterization of the internal hydration state of fuel cells have yielded significant findings. Standard indicators utilized for ascertaining the hydration state of fuel cells encompass direct observation or computation of water content, electrical signals, pressure drop signals, and electrochemical signals \cite{hussainiVisualizationQuantificationCathode2009}.
 % 目前，针对燃料电池内部水合状态表征的研究已经取得了重要的发现。用于确定燃料电池水合状态的标准指标包括直接观察或计算水含量、电信号、压降信号和电化学信号
-\par
-The identification of a fuel cell's hydration state fundamentally involves determining the internal water content, making this the most basic and accurate assessment. Direct observation of water content can be facilitated through the transparent cell method and the neutron imaging method. The transparent cell method modifies the traditional fuel cell structure, employing transparent end plates and flow field plates to directly observe the quantity of liquid water within the flow field\cite{leeVisualizationFloodingSingle2012}. Hussaini et al\cite{hussainiVisualizationQuantificationCathode2009} designed a fuel cell with an effective area of 14cm², containing seven straight channels, and conducted a visual examination of the liquid water content in the fuel cell channels under typical automotive conditions. Yang et al\cite{yangVisualizationLiquidWater2004} utilized a transparent fuel cell for experiments to observe the process of liquid water transfer, discovering that water droplets initially appear on the GDL(Gas Diffusion Layer) surface and adhere to the GDL surface due to surface tension. The neutron imaging method is predicated on the principle that rays will attenuate when traversing an object. Given that different materials exhibit varying attenuation characteristics for neutron beams, particularly as water has higher absorbency than other materials such as metals, the internal water content can be measured using the transmitted neutron dose rate. Pekula\cite{pekulaStudyWaterDistribution2005} and Trabold\cite{traboldSituInvestigationWater2006} employed neutron imaging technology and found that water accumulation is likely to occur where the flow channel turns, providing appropriate explanations for each. However, the high cost and complex operation of current neutron imaging equipment have limited its widespread adoption.
+% \par
+% The identification of a fuel cell's hydration state fundamentally involves determining the internal water content, making this the most basic and accurate assessment. Direct observation of water content can be facilitated through the transparent cell method and the neutron imaging method. The transparent cell method modifies the traditional fuel cell structure, employing transparent end plates and flow field plates to directly observe the quantity of liquid water within the flow field\cite{leeVisualizationFloodingSingle2012}. Hussaini et al\cite{hussainiVisualizationQuantificationCathode2009} designed a fuel cell with an effective area of 14cm², containing seven straight channels, and conducted a visual examination of the liquid water content in the fuel cell channels under typical automotive conditions. Yang et al\cite{yangVisualizationLiquidWater2004} utilized a transparent fuel cell for experiments to observe the process of liquid water transfer, discovering that water droplets initially appear on the GDL(Gas Diffusion Layer) surface and adhere to the GDL surface due to surface tension. The neutron imaging method is predicated on the principle that rays will attenuate when traversing an object. Given that different materials exhibit varying attenuation characteristics for neutron beams, particularly as water has higher absorbency than other materials such as metals, the internal water content can be measured using the transmitted neutron dose rate. Pekula\cite{pekulaStudyWaterDistribution2005} and Trabold\cite{traboldSituInvestigationWater2006} employed neutron imaging technology and found that water accumulation is likely to occur where the flow channel turns, providing appropriate explanations for each. However, the high cost and complex operation of current neutron imaging equipment have limited its widespread adoption.
 % 燃料电池水合状态的识别从根本上涉及确定内部含水量，这是最基本、最准确的评估。通过透明池法和中子成像法可以方便地直接观察水分含量。透明电池方法修改了传统燃料电池结构，采用透明端板和流场板直接观察流场内液态水的量\cite{leeVisualizationFloodingSingle2012}。Hussaini 等人\cite{hussainiVisualizationQuantificationCathode2009}设计了一个有效面积为 14cm²的燃料电池，包含七个直通道，并在典型的汽车条件下对燃料电池通道中的液态水含量进行了目视检查。Yang 等人\cite{yangVisualizationLiquidWater2004}利用透明燃料电池进行实验，观察液态水转移的过程，发现水滴最初出现在 GDL 表面上，并由于表面张力而粘附在 GDL 表面上。中子成像方法基于射线穿过物体时会衰减的原理。鉴于不同的材料对中子束表现出不同的衰减特性，特别是当水比金属等其他材料具有更高的吸收性时，可以使用透射中子剂量率来测量内部含水量。Pekula\cite{pekulaStudyWaterDistribution2005}和 Trabold\cite{traboldSituInvestigationWater2006}采用中子成像技术，发现水流通道转弯处很可能发生积水，并为两者提供了适当的解释。然而，当前中子成像设备的高成本和复杂的操作限制了其广泛采用。
+
 \par
-Consequently, researchers have considered utilizing the law of conservation of mass to compute the water content within the fuel cell. When the fuel cell is operating stably, the flow rate of residual water can be calculated by measuring the discharged water. Zhao et al\cite{zhaoStudyWaterTransport2021} employed a single transparent fuel cell to conduct tests under varying operating conditions.
-% 因此，研究人员考虑利用质量守恒定律来计算燃料电池内的水含量。当燃料电池稳定运行时，通过测量排出的水量即可计算出残留水的流量。赵等人\cite{zhaoStudyWaterTransport2021}采用单个透明燃料电池在不同的操作条件下进行测试。
-By comparing the calculated rate of change in water content within the fuel cell and the water distribution in the flow channel, the accuracy of the model was validated.
-% 通过比较计算出的燃料电池内含水量的变化率和流道内的水分布情况，验证了模型的准确性。
-\par
-The output voltage of the fuel cell serves as the most direct indicator of judgment, and faults in the internal hydration state will directly influence the output voltage, causing it to decrease or fluctuate. Particularly for high-power fuel cell systems, the Cell Voltage Monitoring module (CVM) is often the simplest standard of judgment. In terms of the impact of hydration state faults on voltage, recognition standards based on electrical signals encompass polarization curves and voltage fluctuation signals.
+
+The output voltage of a fuel cell is a direct indicator of hydration state faults, influencing voltage fluctuations or drops, especially in high-power systems where the Cell Voltage Monitoring module (CVM) is a common standard\cite{liReviewWaterFlooding2008,legrosFirstResultsPEMFC2011}. Electrical signal-based recognition standards, such as polarization curves and voltage fluctuation signals, show that severe water flooding leads to more pronounced voltage decay at higher current densities \cite{wuDiagnosticToolsPEM2008}. Additionally, the pressure drop between the fuel cell's inlet and outlet, which increases with liquid water content, reflects water flooding severity and is diagnosed through various indicators and analysis methods\cite{liNovelApproachDetermine2017}.
+
+
+% The output voltage of the fuel cell serves as the most direct indicator of judgment, and faults in the internal hydration state will directly influence the output voltage, causing it to decrease or fluctuate. Particularly for high-power fuel cell systems, the Cell Voltage Monitoring module (CVM) is often the simplest standard of judgment. In terms of the impact of hydration state faults on voltage, recognition standards based on electrical signals encompass polarization curves and voltage fluctuation signals.
 % 燃料电池的输出电压是最直接的判断指标，内部水合状态出现故障会直接影响输出电压，导致输出电压降低或波动。特别是对于大功率燃料电池系统，电池电压监测模块（CVM）往往是最简单的判断标准。对于水化状态故障对电压的影响，基于电信号的识别标准包括极化曲线和电压波动信号。
-\par
-Li et al.\cite{liReviewWaterFlooding2008} showed that at low current densities, water flooding have little effect on the polarization curve. As the current density increases, the voltage drop gradually becomes apparent. The more severe the water flooding, the more severe the voltage decay, and the earlier occurrence of voltage decay. Legros et al\cite{legrosFirstResultsPEMFC2011} introduced dry and wet gases into a single cell, respectively, and found that the fluctuation of the output voltage increased with the current density during dry periods.
+% \par
+% Li et al.\cite{liReviewWaterFlooding2008} showed that at low current densities, water flooding have little effect on the polarization curve. As the current density increases, the voltage drop gradually becomes apparent. The more severe the water flooding, the more severe the voltage decay, and the earlier occurrence of voltage decay. Legros et al\cite{legrosFirstResultsPEMFC2011} introduced dry and wet gases into a single cell, respectively, and found that the fluctuation of the output voltage increased with the current density during dry periods.
 % Li 等人\cite{liReviewWaterFlooding2008}表明，在低电流密度下，注水对极化曲线影响很小。随着电流密度的增加，电压降逐渐变得明显。水淹越严重，电压衰减越严重，并且电压衰减发生得越早。Legros 等人\cite{legrosFirstResultsPEMFC2011}分别将干燥和潮湿的气体引入单个电池中，发现在干燥期间输出电压的波动随着电流密度的增加而增加。
-\par
-The pressure drop between the inlet and outlet of the fuel cell is mainly caused by the friction between the flowing medium and the internal flow channel of the cel\cite{wuDiagnosticToolsPEM2008}. The pressure drop between the two ends increases with the increase of liquid water content, so the pressure drop can well reflect the degree of water flooding in the stack. The indicators include: pressure drop, pressure drop residual, pressure drop frequency, two-phase flow Multiplier coefficient, etc., and the, diagnosis is carried out through the above indicators by qualitative analysis, statistical analysis, artificial intelligence analysis, etc.\cite{liNovelApproachDetermine2017}
+% \par
+% The pressure drop between the inlet and outlet of the fuel cell is mainly caused by the friction between the flowing medium and the internal flow channel of the cel\cite{wuDiagnosticToolsPEM2008}. The pressure drop between the two ends increases with the increase of liquid water content, so the pressure drop can well reflect the degree of water flooding in the stack. The indicators include: pressure drop, pressure drop residual, pressure drop frequency, two-phase flow Multiplier coefficient, etc., and the, diagnosis is carried out through the above indicators by qualitative analysis, statistical analysis, artificial intelligence analysis, etc.\cite{liNovelApproachDetermine2017}
 % 燃料电池入口和出口之间的压降主要是由流动介质与 cel\cite{wuDiagnosticToolsPEM2008}内部流道之间的摩擦引起的。两端之间的压降随着液态水含量的增加而增大，因此压降可以很好地反映烟囱内水淹的程度。指标包括：压降、压降残余、压降频率、两相流乘数系数等，通过定性分析、统计分析、人工智能分析等，通过上述指标进行诊断。引用{liNovelApproachDetermine2017}
 \par
 % \begin{figure}[h]
@@ -70,21 +71,24 @@ When analyzing the relationship between impedance spectra and the internal hydra
 \par
 However, the above methods are mostly suitable for single cells or low-power fuel cells. Applying them to high-power fuel cell doesn't gain any noticeable improvements\cite{tangRecentProgressUse2020,jiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,millerReviewPolymerElectrolyte2011,nagulapatiMachineLearningBased2023}, since the assembly structure, flow field structure, and operating conditions of high-power fuel cell stacks are significantly different from those of single cells and low-power stacks \cite{verhaertWaterManagementAlkaline2011}.
 % 然而，上述方法大多适用于单电池或小功率燃料电池。将它们应用于高功率燃料电池并没有获得任何明显的改进\cite{tangRecentProgressUse2020, JiangMicrobialFuelCell2018,dotelliCombiningElectricalPressure2016,,nagulapatiMachineLearningBased2023}，因为高功率燃料电池堆的装配结构、流场结构和运行条件显着 与单电池和低功率电堆不同。因此，大功率燃料电池系统水合状态的检测还处于比较空白阶段。
+
 \par
-Furthermore, research has indicated that smaller-scale fuel cell stacks exhibit reduced sensitivity to gas flow rates\cite{bonnetDesign80kWePEM2008}, which can also cause the difference between small and big stacks.
+Therefore, researchers have considered utilizing the law of conservation of mass to compute the water content within the fuel cell. When the fuel cell is operating stably, the flow rate of residual water can be calculated by measuring the discharged water. Zhao et al\cite{zhaoStudyWaterTransport2021} employed a single transparent fuel cell to conduct tests under varying operating conditions. By comparing the calculated rate of change in water content within the fuel cell and the water distribution in the flow channel, the accuracy of the model was validated.
+% 因此，研究人员考虑利用质量守恒定律来计算燃料电池内的水含量。当燃料电池稳定运行时，通过测量排出的水量即可计算出残留水的流量。赵等人\cite{zhaoStudyWaterTransport2021}采用单个透明燃料电池在不同的操作条件下进行测试。
+% By comparing the calculated rate of change in water content within the fuel cell and the water distribution in the flow channel, the accuracy of the model was validated.
+% 通过比较计算出的燃料电池内含水量的变化率和流道内的水分布情况，验证了模型的准确性。
+
+
+\par
+In addition, research has indicated that smaller-scale fuel cell stacks exhibit reduced sensitivity to gas flow rates\cite{bonnetDesign80kWePEM2008}, which can also cause the difference between small and big stacks.
 % 小尺寸电堆对于气体流量更不敏感
-
-% TODO 这里需要添加一些参考文献
-Therefore, the detection of the hydration state of high-power fuel cell systems is still in a relatively blank stage.
-
-
+% TODO: 添加更多的文献
 \par
 Additionally, the variation in the number of cells within a fuel cell stack can significantly influence the power generation performance, leading to temperature imbalances\cite{millerReviewPolymerElectrolyte2011}. This, in turn, further exacerbates the uneven distribution of water present throughout the stack. Consequently, there exists a pronounced distinction between smaller and larger stacks regarding these phenomena.
 % 电堆中 Cell 数量的多寡会影响性能，也会导致温度不均衡，进而导致水存量的不均衡
-Researches indicates that there may exist notable differences in the water generation mechanisms between large-scale and small-scale polymer electrolyte membrane fuel cell (PEMFC) stacks\cite{jiReviewWaterManagement2009}. Therefore, traditional approaches relying on electrochemical analysis and similar techniques may not be applicable to large-scale stacks. Due to the fact that large-scale fuel cell stacks frequently operate at lower power densities\cite{shojayianSimulationCathodeCatalyst2024}, this could potentially have an impact on the water generation mechanisms involved, further differentiating them from their smaller-scale counterparts.
+Researches indicates that there may exist notable differences in the water generation mechanisms between large-scale and small-scale proton exchange membrane fuel cell (PEMFC) stacks\cite{jiReviewWaterManagement2009}. Therefore, traditional approaches relying on electrochemical analysis and similar techniques may not be applicable to large-scale stacks. Due to the fact that large-scale fuel cell stacks frequently operate at lower power densities\cite{shojayianSimulationCathodeCatalyst2024}, this could potentially have an impact on the water generation mechanisms involved, further differentiating them from their smaller-scale counterparts.
 % 解释了 PEMFC 中水管理问题，提及了大型电堆可能与小型电堆的水生成机理有区别
 
-% 大型电堆通常在低功率密度下工作，这可能会对水生成带来一定的影响 [4]
 \par
 % Consequently, this study aims to investigate the hydration state of high-power fuel cell systems, construct, and validate a water balance model. Initially, the water balance model of the high-power fuel cell system is scrutinized, and a condensation-type exhaust water collection device is established to compute the water flow rate emanating from the fuel cell system.
 This study is dedicated to exploring the hydration state of high-power fuel cell systems and developing a validated water balance model. The research begins by examining the water balance model of a high-power fuel cell system and introduces a condensation-type exhaust water collection device to accurately measure the water flow rate exiting the system.
@@ -96,6 +100,3 @@ Thus, at low power, maintaining an appropriate operating temperature is crucial,
 % Conversely, as the load current intensifies, the impact of the air stoichiometric ratio also incrementally escalates. Therefore, at low power, it is essential to maintain an appropriate working temperature, while at high power, upholding an appropriate metering ratio is of greater significance.
 
 % 因此，本研究旨在研究高功率燃料电池系统的水合状态，构建并验证水平衡模型。首先，仔细研究了大功率燃料电池系统的水平衡模型，并建立了冷凝式废水收集装置来计算从燃料电池系统排出的水流量。为了验证所构建的水平衡模型，在不同的工作温度、空气计量比和负载电流下进行了受控变量实验。实验结果表明，随着工作温度和空气计量比的升高，空气侧出水流量逐渐增大，氢气侧出水流量逐渐减小。随着负载电流的增大，从两侧流出的水流量增大。最终根据实验数据计算出不同条件下燃料电池系统内部含水量的变化率。结果表明，在相同负载电流下，随着工作温度和空气化学计量比的增大，燃料电池系统内部含水量的变化率逐渐减小。相反，随着负载电流的增强，空气化学计量比的影响也逐渐增大。因此，在低功率时，保持适当的工作温度至关重要，而在高功率时，保持适当的计量比则更为重要。
-\par
-Drawing from the experimental results, we posit the following perspective: The water generation and water balance models for large-scale fuel cell stacks exhibit fundamental differences from those of smaller-scale models, and they cannot be simply regarded as linear extensions of the smaller models. The internal states of large-scale fuel cell stacks are more intricate due to their increased scale, which introduces additional complexities not present in smaller stacks. Therefore, conventional methodologies rooted in small-scale stack models may not fully capture the nuances of large-scale stack behavior. This insight underscores the need for tailored modeling approaches that account for the unique characteristics and operational challenges of large-scale fuel cell systems.
-% Based on the experiment results, we propose the following viewpoint: The water generation and water balance models for large-scale fuel cell stacks differ mechanistically from those of smaller-scale models and cannot be considered as linear scalings of the smaller models. The internal states of large-scale fuel cell stacks exceed the complexity of small-scale stacks due to their increased scale. Consequently, traditional approaches based on small-scale stacks may not be entirely applicable to large-scale stacks.
