--- a/Research_on_water_status_Chapters/Airside_Waterflow_figure_2.tex
+++ b/Research_on_water_status_Chapters/Airside_Waterflow_figure_2.tex
@@ -7,24 +7,26 @@
 					xlabel={Working Temperature/$^{\circ}C$},
 					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
 					xmin=50, xmax=75,
-					ymin=0, ymax=2,
-					ytick distance = 0.5,
-					legend pos=south west,
+					ymin=0, ymax=5,
+					ytick distance = 1,
+					xtick distance = 5,
+					legend pos=north west,
 					ymajorgrids=true,
 					grid style=dashed,
+					line width=1pt
 				]
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.0:2.0}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
+				\addplot [color=red, mark=square*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.0:2.0}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
 				\addlegendentry{Ratio 2.0}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.2:2.2}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
+				\addplot [color=green, mark=diamond*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.2:2.2}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
 				\addlegendentry{Ratio 2.2}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.4:2.4}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
+				\addplot [color=orange, mark=asterick] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.4:2.4}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
 				\addlegendentry{Ratio 2.4}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.6:2.6}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
+				\addplot [color=cyan, mark=x] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.6:2.6}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
 				\addlegendentry{Ratio 2.6}
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.8:2.8}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
+				\addplot [color=purple, mark=star] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.8:2.8}] {Research_on_water_status_data/hydrogenside_waterflow_120A_in_ratio.csv};
 				\addlegendentry{Ratio 2.8}
 			\end{axis}
 	
@@ -38,22 +40,24 @@
 					xlabel={Working Temperature/$^{\circ}C$},
 					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
 					xmin=50, xmax=75,
-					ymin=0, ymax=3,
-					ytick distance = 0.5,
-					legend pos=south west,
+					ymin=0, ymax=5,
+					ytick distance = 1,
+					xtick distance = 5,
+					legend pos=north west,
 					ymajorgrids=true,
 					grid style=dashed,
+					line width=1pt
 				]
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{1.8:1.8}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
+				\addplot [color=blue, mark=triangle*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{1.8:1.8}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
 				\addlegendentry{Ratio 1.8}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.0:2.0}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
+				\addplot [color=red, mark=square*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.0:2.0}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
 				\addlegendentry{Ratio 2.0}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.2:2.2}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
+				\addplot [color=green, mark=diamond*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.2:2.2}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
 				\addlegendentry{Ratio 2.2}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.4:2.4}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
+				\addplot [color=orange, mark=asterick] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.4:2.4}] {Research_on_water_status_data/hydrogenside_waterflow_210A_in_ratio.csv};
 				\addlegendentry{Ratio 2.4}
 		
 			\end{axis}
@@ -68,32 +72,31 @@
 					title={Hydrogen side waterflow at 300A load current},
 					xlabel={Working Temperature/$^{\circ}C$},
 					ylabel={Airside Water Flow/$g \cdot s^{-1}$},
-					xmin=60, xmax=75,
-					ymin=2, ymax=4.5,
-					ytick distance = 0.5,
-					xtick distance = 2,
-					legend pos=south west,
+					xmin=50, xmax=75,
+					ymin=0, ymax=5,
+					ytick distance = 1,
+					xtick distance = 5,
+					legend pos=north west,
 					ymajorgrids=true,
 					grid style=dashed,
+					line width=1pt
 				]
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{1.8:1.8}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
+				\addplot [color=blue, mark=triangle*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{1.8:1.8}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
 				\addlegendentry{Ratio 1.8}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.0:2.0}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
+				\addplot [color=red, mark=square*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.0:2.0}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
 				\addlegendentry{Ratio 2.0}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.2:2.2}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
+				\addplot [color=green, mark=diamond*] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.2:2.2}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
 				\addlegendentry{Ratio 2.2}
 		
-				\addplot table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.4:2.4}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
+				\addplot [color=orange, mark=asterick] table [x=temperature, y=waterflow, col sep=comma, restrict expr to domain={\thisrow{ratio}}{2.4:2.4}] {Research_on_water_status_data/hydrogenside_waterflow_300A_in_ratio.csv};
 				\addlegendentry{Ratio 2.4}
 		
 			\end{axis}
 			
 		\end{tikzpicture}
 	}
-
-
 	\caption{Comparison of water flow rate flowing out of the air side at different operating temperatures (a:120A; b:210A; c:300A; vertical water flow; horizontal as temperature; starting point from top to bottom is ordered by flow rate: 1.8/2.0/2.2/2.4)}
 	\label{fig:fig5}
 \end{figure}
