--- a/Research_on_water_status_Chapters/Chapter2_Experiment.tex
+++ b/Research_on_water_status_Chapters/Chapter2_Experiment.tex
@@ -18,14 +18,17 @@ Literature review highlights that the air-to-fuel ratio, operating temperature, 
 	\begin{center}
 		\caption{Water state experimental parameter table}
 		\label{tab:WaterStateExperimentalParameterTable}
-		\begin{tabular}{l|c|r}
-			\hline
-			\textbf{\makecell{Load current(A) /          \\currency density($A·cm^{-2}$)}}   & \textbf{Working temperature($^{\circ}C$)} & \textbf{Air metering ratio} \\
-			\hline
+		\begin{tabular}{ccc}
+			% \hline
+			\toprule
+			\textbf{\makecell{Load current(A) /          \\currency density(A·cm\raise0.5ex\hbox{-2})}}   & \textbf{Working temperature(\textdegree C)} & \textbf{Air metering ratio} \\
+			% \hline
+			\midrule
 			120/0.4 & 55,60,65,70,73 & 2,2.2,2.4,2.6,2.8 \\
 			210/0.7 & 55,60,65,70,73 & 1.8,2,2.2,2.4     \\
 			300/1.0 & 63,65,68,70,73 & 1.8,2,2.2,2.4     \\
-			\hline
+			% \hline
+			\bottomrule
 		\end{tabular}
 	\end{center}
 
@@ -66,7 +69,7 @@ Taking the fuel cell system during steady-state operation as the research object
 	\frac{d m_{w,s t k}}{d t}=\frac{d m_{w,s y s}}{d t}
 \end{equation}
 Each part of the equation required for the water balance model is described below:
-\subsection*{Water flow into the system}
+\subsubsection{Water flow into the system}
 Since the hydrogen entering the system is high-pressure hydrogen with a purity of 99.99\%, water vapor mainly enters the system with the air. By recording the temperature, humidity, pressure of the environment during the reaction process, and the air flow entering the system, the water flow entering the system can be calculated.
 % 由于进入系统的氢气是纯度为 99.99% 的高压氢气，因此水蒸气主要随空气进入系统。通过记录反应过程中环境的温度、湿度、压力以及进入系统的空气流量，可以计算出进入系统的水流量。
 \begin{equation}\label{waterFlowEnteringSystemCalculation}
@@ -98,7 +101,7 @@ The water flow produced by electrochemical reaction can be presented as formula 
 	\item $I_{st}$ represents load current, in A.
 	\item $F$ stands for faraday constant, which is 96485C/mol.
 \end{itemize}
-\subsection*{The water flow out of the system from the air side and the hydrogen side}
+\subsubsection{The water flow out of the system from the air side and the hydrogen side}
 To measure the water flow out of the system from the air and hydrogen sides, this article has designed an exhaust water content detection device centered on condensation.
 % 为了测量从空气侧和氢气侧流出系统的水流量，本文设计了一种以冷凝为核心的排气含水量检测装置。
 \begin{figure}
@@ -133,7 +136,7 @@ Since the hydrogen return circuit of the system is equipped with a water separat
 \end{equation}
 $m_{w,ancollect}$ represents the mass of the liquid collected by the exhaust water collection device on the hydrogen side, in grams(g).
 
-\subsection*{Test methods}
+\subsubsection{Test methods}
 In sequence, turn on host computer, system controller, electronic load, auxiliary devices, and impedance testing system; Turn on the water pump, solenoid valve, proportional valve, back pressure valve, air compressor, drain valve, and hydrogen circulation pump in sequence, setting the anode inlet gas pressure 10kPa higher than the cathode inlet gas pressure ($\Delta p=20kPa$).
 % 依次打开主机、系统控制器、电子负载、辅助设备、阻抗测试系统； 依次打开水泵、电磁阀、比例阀、背压阀、空压机、排水阀、氢气循环泵，设置阳极入口气体压力比阴极入口气体压力高10kPa（$\Delta p=20kPa $）。
 \par
